[package]
name = "xkcd_fetcher"
version = "0.1.0"
authors = ["jstone <jstone@jnet-it.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.24"
serde_json = "1.0.44"
serde = "1.0.104"
serde_derive = "1.0.104"
clap = "2.33.0"
tempfile = "3.1.0"
image = "0.17.0"
